# Hashy

./: Cargo.toml  README.md  encrypt.go  go.mod  main.go  main_test.go  switcher.go
src/: lib.rs  main.rs
