[package]
name = "hashy"
version = "0.2.0"
edition = "2021"
license = "MIT"
description = "Library and command-line tool for hashing strings"
homepage = "https://astroorbis.com"
repository = "https://github.com/astroorbis/hashy"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inquire = "0.6.2"
md5 = "0.7.0"
sha1 = "0.10.5"
sha2 = "0.10.7"

[[bin]]
name = "hashy"
path = "src/main.rs"

[lib]
name = "hashy"
path = "src/lib.rs"
